// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Side menu item active 1`] = `
<a
  className="h-[60px] flex items-center bg-credix-primary"
  href="/invest"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="border-0 h-8 border-l-[3px] border-darker border-solid w-full pl-[23px] flex items-center text-darker font-bold"
  >
    <svg
      className="w-4 h-4 fill-current w-[20px] h-[20px]"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="m14.034 7.569-1.225 2.45a2.493 2.493 0 0 1 1.49.745l1.226-2.45a2.494 2.494 0 0 1-1.491-.745Zm-2.612 2.675a2.51 2.51 0 0 0-1.178 1.178L8.578 9.756a2.51 2.51 0 0 0 1.178-1.178l1.666 1.666ZM5.701 9.235l-1.225 2.45a2.493 2.493 0 0 1 1.49.746l1.225-2.45a2.493 2.493 0 0 1-1.49-.746Z"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M16.667 5.833a.833.833 0 1 1-1.667 0 .833.833 0 0 1 1.667 0Zm1.667 0a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Zm-10 1.667a.833.833 0 1 1-1.667 0 .833.833 0 0 1 1.667 0ZM10 7.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Zm-5 6.667a.833.833 0 1 1-1.666 0 .833.833 0 0 1 1.666 0Zm1.667 0a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Zm5.833-.834a.833.833 0 1 0 0-1.666.833.833 0 0 0 0 1.666Zm0 1.667a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="pl-[18px] text-base"
    >
      Invest
    </span>
  </div>
</a>
`;

exports[`Side menu item inactive 1`] = `
<a
  className="h-[60px] flex items-center bg-darker"
  href="/invest"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="border-0 h-8 border-l-[3px] border-darker border-solid w-full pl-[23px] flex items-center text-credix-primary font-medium"
  >
    <svg
      className="w-4 h-4 fill-current w-[20px] h-[20px]"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="m14.034 7.569-1.225 2.45a2.493 2.493 0 0 1 1.49.745l1.226-2.45a2.494 2.494 0 0 1-1.491-.745Zm-2.612 2.675a2.51 2.51 0 0 0-1.178 1.178L8.578 9.756a2.51 2.51 0 0 0 1.178-1.178l1.666 1.666ZM5.701 9.235l-1.225 2.45a2.493 2.493 0 0 1 1.49.746l1.225-2.45a2.493 2.493 0 0 1-1.49-.746Z"
        fillRule="evenodd"
      />
      <path
        clipRule="evenodd"
        d="M16.667 5.833a.833.833 0 1 1-1.667 0 .833.833 0 0 1 1.667 0Zm1.667 0a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Zm-10 1.667a.833.833 0 1 1-1.667 0 .833.833 0 0 1 1.667 0ZM10 7.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Zm-5 6.667a.833.833 0 1 1-1.666 0 .833.833 0 0 1 1.666 0Zm1.667 0a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Zm5.833-.834a.833.833 0 1 0 0-1.666.833.833 0 0 0 0 1.666Zm0 1.667a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="pl-[18px] text-base"
    >
      Invest
    </span>
  </div>
</a>
`;
